--- a/example.hosts.ini
+++ b/example.hosts.ini
@@ -1,3 +1,3 @@
 [servers]
-; my-server-01.example.local netdata_role=primary
-; my-server-02.example.local netdata_role=secondary
+; my-server-01.example.local netdata_role=primary   wireguard_address=10.0.0.1
+; my-server-02.example.local netdata_role=secondary wireguard_address=10.0.0.2
