wireguard: forgot to upload wireguard role

--- a/playbooks/software.yml
+++ b/playbooks/software.yml
@@ -14,8 +14,7 @@
       become: true
     - name: wireguard
       become: true
-    - role: geerlingguy.postgresql
+    - name: geerlingguy.postgresql
       become: true
-    - role: netdata
+    - name: netdata
       become: true
-      
